# fri-semantic-parser

./: CMakeCache.txt  CMakeLists.txt  CYKParser.cpp  CYKParser.h  Lexicon.cpp  Lexicon.h  Makefile  Ontology.cpp  Ontology.h  ParseNode.cpp  ParseNode.h  README.md  SemanticNode.cpp  SemanticNode.h  cmake_install.cmake  dict.csv  lex.txt  main  main.cpp  ont.txt  test.txt
